added: categories component

--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1,3 +1,10 @@
 .transition-liner {
   transition: 0.2s linear;
 }
+
+.svg-blue {
+  path {
+    transition: 0.2s linear !important;
+    fill: #00acef;
+  }
+}
